# mdal-vix-26

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
data/events/: fomc_events_2011_2018.csv
docs/: event_table_spec.md  method_notes.md
paper/: main.tex  references.bib
paper/sections/: conclusion.tex  data.tex  introduction.tex  methodology.tex
results/tables/: descriptive_stats.md  descriptive_stats.tex
src/: config.py  download_vix.py  run_event_study.py
tests/: test_event_study.py
