[project]
name = "mdal-vix-26"
version = "0.1.0"
description = "FOMC announcements and VIX event study (2011-2018)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "yfinance>=0.2",
    "scipy>=1.10",
    "statsmodels>=0.14",
    "tabulate>=0.10.0",
    "jinja2>=3.1.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
